<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoHenry</string>
    <string name="action_settings">Settings</string>   
    
    <string name="label_action_viewFiles">View Files</string>
    <string name="label_action_uploadFile">Upload File</string>
    <string name="label_button_submit">Submit</string>
    <string name="label_user_id">USER ID</string>
    <string name="label_first_pick">FIRST PICK</string>
    <string name="label_second_pick">SECOND PICK</string>
    <string name="label_third_pick">THIRD PICK</string>
    <string name="label_amount">AMOUNT</string>
    
    <string name="message_sent">Sent.</string>
    
    <string name="hint_user_id">Enter User Id</string>
    <string name="hint_first_pick">Enter first pick</string>
    <string name="hint_second_pick">Enter second pick</string>
    <string name="hint_third_pick">Enter third pick</string>
    <string name="hint_amount">Enter amount</string>
    
    <string name="title_activity_main">Demo</string>
    <string name="title_activity_files">Files</string>
    <string name="title_activity_load_file">File Info</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="pref_server">Configure Server</string>
    <string name="pref_server_path">Server URL</string>
    <string name="pref_server_path_summary">Configure web service url</string>
    
    <string name="pref_agent">Configure Agent</string>
    <string name="pref_agent_id">Agent ID</string>
    <string name="pref_agent_summary">Add agent Id</string>
</resources>
