<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" 
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_button_submit" />
    
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
        android:layout_above="@+id/button_submit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
        android:id="@+id/container_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/label_user_id"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/edittext_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_user_id"
            android:inputType="text"
            android:textColor="#333333"
            android:textColorHint="#cccccc"
            android:textSize="24sp" >

            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/label_first_pick"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/edittext_firstPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_first_pick"
            android:inputType="text"
            android:textColor="#333333"
            android:textColorHint="#cccccc"
            android:textSize="24sp" >
            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/label_second_pick"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/edittext_secondPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_second_pick"
            android:inputType="text"
            android:textColor="#333333"
            android:textColorHint="#cccccc"
            android:textSize="24sp" >
            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/label_third_pick"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/edittext_thirdPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/hint_third_pick"
            android:inputType="text"
            android:textColor="#333333"
            android:textColorHint="#cccccc"
            android:textSize="24sp" >
            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/label_amount"
            android:textColor="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/edittext_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/hint_amount"
            android:textColor="#333333"
            android:textColorHint="#cccccc"
            android:textSize="24sp" >
            <requestFocus />
        </EditText>


    </LinearLayout>
    </ScrollView>
    
    

    

    

</RelativeLayout>
